     [effect]apply_to=attack. It also now supports effect descriptions,
     for use by the [trait] tag.
   * Additional fields in unit proxy:
     * usage, cost - self-explanatory
     * traits - list of the IDs of all traits
     * abilities - list of the IDs of all abilities
   * Additional fields in table returned by wesnoth.get_terrain_info:
     * icon, editor_image, light
   * Additional fields in unit type proxu:
     * race, id, alignment
     * attacks, which returns the same thing as unit.attacks
     * abilities, same as unit.abilities
   * LuaAI:
     * The table returned by check_*() now has a "result" field which
       gives a description of the action's result; similar to "status"
       but more descriptive.
     * Target tables now use a descriptive name for "type", instead of
       an integer. This applies to the elements of the table returned by
       ai.get_targets() and also to the elements of tables returned by
       Lua goals. (However, Lua goals that used integers will continue
       to work for now.)
     * There are some compatibility-breaking changes to Lua candidate
       actions - see the release notes or the wiki for full details.
     * Lua AI code can now access the AI routines through the global ai
       object. This object is only accessible to AI code; it does not exist
       in the general Lua global scope.
     * When executing Lua goals, aspects, or candidate action evaluations,
       the ai is in "read-only" mode - the read_only key is set to true,
       and functions that change the gamestate, such as ai.attack(), are
       missing from the table. (ai.check_*() functions are still present.)
     * The ai.aspects table provides access to every aspect known by the
       engine, including several that previously did not have corresponding
       ai.get_*() functions. You access them as ai.aspects.avoid, for example.
       The table is read-only and raises an error if you attempt to write to it.