@@ -1270,6 +1270,9 @@
         name = "Maximilian Lupke (malumalu)"
     [/entry]
     [entry]
+        name = "Marius Spix (spixi)"
+    [/entry]
+    [entry]
         name = "Michael Flowers (MJ)"
     [/entry]
     [entry]
