@@ -218,6 +218,8 @@ CALLABLE_WRAPPER_INPUT(hidden)
 CALLABLE_WRAPPER_INPUT(flag)
 CALLABLE_WRAPPER_INPUT(flag_icon)
 CALLABLE_WRAPPER_INPUT(team_name)
+CALLABLE_WRAPPER_INPUT(faction)
+CALLABLE_WRAPPER_INPUT(faction_name)
 CALLABLE_WRAPPER_INPUT(color)
 CALLABLE_WRAPPER_INPUT(share_vision)
 CALLABLE_WRAPPER_INPUT(carryover_bonus)
