@@ -170,10 +170,12 @@ Version 1.13.4+dev:
      * abilities - list of the IDs of all abilities
    * Additional fields in table returned by wesnoth.get_terrain_info:
      * icon, editor_image, light
-   * Additional fields in unit type proxu:
+   * Additional fields in unit type proxy:
      * race, id, alignment
      * attacks, which returns the same thing as unit.attacks
      * abilities, same as unit.abilities
+   * Additional field in side proxy:
+     * faction (read-only), faction_name (read-only)
    * LuaAI:
      * The table returned by check_*() now has a "result" field which
        gives a description of the action's result; similar to "status"
@@ -205,6 +207,8 @@ Version 1.13.4+dev:
        should return a table with keys "own" and "enemy", each of which may
        be either a unit filter table or a function which takes a unit as a
        parameter and returns true or false.
+ * Multiplayer:
+   * Hornshark Island: simplified multiplayer faction determination
  * Wesnoth formula engine:
    * Formulas in unit filters can now access nearly all unit attributes
      The following attributes were renamed (old names still work, for now):
